Cambio en la estructura del template

--- a/index.html
+++ b/index.html
@@ -57,13 +57,16 @@
           </div>
         </div>
         <div id="listado-tareas" class="col-6">
-          <h1 class="text-center fw-bolder" id="titulo-listas">Mis tareas</h1>
-          <table>
-            <thead></thead>
-            <tbody id="ejemplo"></tbody>
-          </table>
-          <template id="template-listas">
-            <div class="w-100 border shadow rounded p-5 mt-2 bg-white">
+          <h2 class="text-center fw-bold">Mis Tareas 📌</h2>
+        </div>
+      </div>
+    </div>
+    <script src="js/tareamodificado.js" async defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  </body>
+</html>
+
+<!-- <div class="w-100 border shadow rounded p-5 mt-2 bg-white">
               <hr class="bg-dark" />
               <div class="row justify-content-end">
                 <div class="col-1">
@@ -118,12 +121,4 @@
                   <tbody id="tbody-final"></tbody>
                 </table>
               </div>
-            </div>
-          </template>
-        </div>
-      </div>
-    </div>
-    <script src="js/tareas.js" async defer></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  </body>
-</html>
+            </div>-->
