--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de tareas</title>
+    <title>LISTA DE TAREAS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -65,60 +65,3 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
-
-<!-- <div class="w-100 border shadow rounded p-5 mt-2 bg-white">
-              <hr class="bg-dark" />
-              <div class="row justify-content-end">
-                <div class="col-1">
-                  <button
-                    id="eliminar_tarea"
-                    name="eliminar_tarea"
-                    title="Eliminar tarea"
-                    class="eliminar_tarea btn-close text-dark"
-                    aria-label="Close"
-                  ></button>
-                </div>
-              </div>
-              <div class="card mt-2">
-                <h5 id="titulo-tarea" class="card-header"></h5>
-                <div class="card-body">
-                  <form id="form-guardar-tarea" method="POST">
-                    <div class="row">
-                      <div class="col-8">
-                        <input
-                          id="subtarea"
-                          name="subtarea"
-                          class="subtarea form-control w-100"
-                          placeholder="Ingresa una subtareas "
-                        />
-                      </div>
-                      <div class="col-4">
-                        <button
-                          id="guardar_subtarea"
-                          name="guardar_subtarea"
-                          class="guardar_subtarea btn btn-outline-secondary"
-                        >
-                          Guardar
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
-              <hr />
-              <div class="w-100">
-                <h3 class="text-dark text-center fw-bold">
-                  Subtareas 📋<samp></samp>
-                </h3>
-                <table id="super-tabla" class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th>Actividad</th>
-                      <th>Estado</th>
-                      <th>Acciones</th>
-                    </tr>
-                  </thead>
-                  <tbody id="tbody-final"></tbody>
-                </table>
-              </div>
-            </div>-->
